# simplepdf-embed

./: .gitattributes  .gitignore  LICENSE.md  README.md  context7.json  package-lock.json  package.json  rollup.config.js  tsconfig.json
.changeset/: embed-company-identifier-snake-operations.md  embed-initial-release.md  long-paths-tell.md  pin-embed-exact.md  react-embed-pdf-2-core-rebuild.md  rename-boxed-text-to-comb-text.md  rename-remove-fields-to-delete-fields.md  replace-create-field-with-detect-fields.md  tanstack-ai-adapter.md
.do/: deploy.template.yaml
agent-pdf/: Cargo.toml  Dockerfile  README.md  SKILL.md
agent-pdf/.do/: app.yaml
agent-pdf/src/: config.rs  error.rs  main.rs  rate_limit.rs  routes.rs  storage.rs
agents/: Cargo.toml  Dockerfile  README.md  SKILL.md
agents/.do/: app.yaml
agents/src/: config.rs  main.rs  routes.rs  storage.rs
bubble/: README.md
chrome-extension/: .prettierignore  .prettierrc  README.md  background.js  manifest.json  package-lock.json  package.json  popup.html  popup.js  styles.css
copilot/: .cta.json  .env.example  LICENSE  README.md  package-lock.json  package.json  vite.config.ts  vitest.config.ts
documentation/: IFRAME.md
embed/: CHANGELOG.md  README.md  embed-api.json  package.json  tsconfig.json  tsup.config.ts
form-copilot/: .cta.json  .env.example  README.md  biome.json  package-lock.json  package.json  tsconfig.json  vite.config.ts
mcp-app/: README.md  main.ts  mcp-app.html  package-lock.json  package.json  server.ts  tsconfig.json  tsconfig.server.json  vite.config.ts  wrangler.jsonc
(+500 files in other folders)
