[package]
name = "agents"
version = "0.1.0"
edition = "2021"

[dependencies]
aws-sdk-s3 = "1.127.0"
axum = { version = "0.8.8", features = ["multipart"] }
dashmap = "6.1.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.50.0", features = ["full"] }
tower-http = { version = "0.6.8", features = ["cors", "limit"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
uuid = { version = "1.22.0", features = ["v4"] }

[profile.release]
opt-level = "z"
lto = true
strip = true
